# vaultic

./: .dockerignore  .env.example  .env.staging.example  .gitignore  .gitlab-ci.yml  CLAUDE.md  Cargo.toml  LICENSE  README.en.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  repomix-output.xml  system-design.pen  tsconfig.base.json  turbo.json
.claude/agent-memory/tester/: phase-02-crypto-test-results.md
.claude/session-state/: latest.md
.claude/session-state/archive/: 20260329-0917.md  20260329-0918.md  20260329-0920.md  20260329-0921.md  20260329-0923.md
_archive/crates/vaultic-crypto/: test-vectors.json
_archive/crates/vaultic-migration/: Cargo.toml
_archive/crates/vaultic-types/: Cargo.toml
backend/: .env.dattqh  .env.example  build.js  ecosystem.config.cjs  package.json
backend/.claude/session-state/: latest.md
backend/src/: server.ts
backend/src/config/: env-config.ts
backend/src/middleware/: auth-middleware.ts  error-handler-middleware.ts  rate-limit-middleware.ts  request-logger-middleware.ts
backend/src/models/: folder-model.ts  secure-share-model.ts  user-model.ts  vault-item-model.ts
backend/src/routes/: auth-route.ts  extension-update-route.ts  health-route.ts  share-route.ts  sync-route.ts
backend/src/services/: auth-service.ts  share-service.ts  sync-ops-builders.ts  sync-service.ts
backend/src/static/: share-page.html
backend/src/utils/: app-error.ts  jwt-utils.ts  validate-request.ts
backend/static/: extension-release.json
client/apps/extension/: .env.dattqh  .env.example  package.json  tsconfig.json  wxt.config.ts
crates/vaultic-crypto/: Cargo.toml
crates/vaultic-crypto/src/: cipher.rs  kdf.rs  lib.rs  password_gen.rs
crates/vaultic-crypto/tests/: interop_tests.rs  kdf_tests.rs  password_gen_tests.rs
crates/vaultic-server/: Cargo.toml
crates/vaultic-server/src/: config.rs  main.rs  router.rs
crates/vaultic-server/src/entities/: mod.rs  user.rs
crates/vaultic-server/src/handlers/: mod.rs  share.rs
crates/vaultic-server/src/services/: auth_service.rs  mod.rs  share_service.rs  sync_service.rs
crates/vaultic-server/static/: share-page.html
docker/: Dockerfile  docker-compose.staging.yml  docker-compose.yml
docker/nginx/: vaultic.conf
docs/: agent-rules.md  code-standards.md  codebase-summary.md  development-roadmap.md  privacy-policy.md  project-changelog.md  project-overview-pdr.md  security-policy.md  system-architecture.md  terms-of-service.md
docs/design-screens/: index.html
docs/journals/: 2026-03-31-chrome-web-store-publish-prep.md  260331-plans-cleanup.md
landing/: index.html  nginx.conf.example  privacy-policy.html  terms.html
scripts/: build-extension-release.sh
shared/types/: package.json
(+354 files in other folders)
