# [workspace]
# members = ["crates/*"]  # Archived — migrated to Node.js backend
# resolver = "2"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
hmac = "0.12"
base64 = "0.22"
aes-gcm = "0.10"
argon2 = "0.5"
hkdf = "0.12"
zeroize = { version = "1", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
