[package]
name = "vaultic-crypto"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = "0.10"
argon2 = "0.5"
hkdf = "0.12"
sha2 = "0.10"
rand = "0.8"
base64 = "0.22"
hex = "0.4"
zeroize = { version = "1", features = ["derive"] }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = "1"
