[package]
name = "vaultic-crypto"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = { workspace = true }
argon2 = { workspace = true }
hkdf = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
zeroize = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = "1"
